# empresa-gestao-api

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: activities.py  auth.py  companies.py  dashboard.py  deps.py  projects.py  teams.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  activity.py  base.py  company.py  project.py  team.py  user.py
app/repositories/: activity.py  company.py  dashboard.py  project.py  team.py  user.py
app/schemas/: activity.py  auth.py  company.py  dashboard.py  project.py  team.py  user.py
app/services/: activity.py  auth.py  company.py  dashboard.py  project.py  team.py
migrations/: env.py
migrations/versions/: 11dca4ff2892_create_initial_tables.py
